<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textViewHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/settings_selection"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewHeading"
        android:text="@string/settings_cash_withdrawl"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:textColor="@color/colorAccent"
        android:id="@+id/textView1" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewHeading"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:checked="true"
        android:id="@+id/switch1" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView1"
        android:layout_gravity="center"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:textSize="16sp"
        android:text="@string/settings_deposit"
        android:textColor="@color/colorAccent" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/switch1"
        android:checked="true"
        android:layout_below="@+id/textView1" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:layout_gravity="center"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:textSize="16sp"
        android:text="@string/settings_cheque_unit"
        android:textColor="@color/colorAccent" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/switch2"
        android:checked="true"
        android:layout_alignTop="@+id/textView3" />


</RelativeLayout>